--- a/templates/supplyRecord.html
+++ b/templates/supplyRecord.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Supplier Information</title>
+        <title>Supply Record Information</title>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script type="text/javascript" src="app.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
